--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="NFTs-Bundles Minter, from Lepricon" />
+    <meta name="description" content="NFTs-Packs Minter, from Lepricon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Sora:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>NFTs-Bundles Minter</title>
+    <title>NFTs-Packs Minter</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
