--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Sora:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>NFTs-Packs Minter</title>
+    <title>Pack Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
